--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "nanoid": "^3.3.7",
     "socket.io": "^4.7.5",
     "unique-username-generator": "^1.3.0",
     "zod": "^3.23.8"
